reverted to java 1.8