@@ -5,6 +5,7 @@ import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -17,7 +18,7 @@ public class ConsoleCommandActionType implements ActionType {
 
     @Override
     public List<String> getAliases() {
-        return List.of("consoleCommand");
+        return Arrays.asList("consoleCommand");
     }
 
     @Override
@@ -27,17 +28,17 @@ public class ConsoleCommandActionType implements ActionType {
 
     @Override
     public List<String> getParameters() {
-        return List.of("command");
+        return Arrays.asList("command");
     }
 
     @Override
     public List<String> getOptionalParameters() {
-        return List.of();
+        return Arrays.asList();
     }
 
     @Override
     public void execute(Object target, @NotNull List<String> params, @NotNull Map<String, String> replacements) {
-        params = applyPlaceholders(target instanceof Player player ? player : null, params, replacements);
+        params = applyPlaceholders(target instanceof Player ? (Player) target: null, params, replacements);
         String command = params.get(0);
         Bukkit.dispatchCommand(Bukkit.getConsoleSender(), command);
     }
