@@ -6,6 +6,7 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -18,7 +19,7 @@ public class MessageActionType implements ActionType {
 
     @Override
     public List<String> getAliases() {
-        return List.of("message", "msg");
+        return Arrays.asList("message", "msg");
     }
 
     @Override
@@ -28,19 +29,20 @@ public class MessageActionType implements ActionType {
 
     @Override
     public List<String> getParameters() {
-        return List.of("message");
+        return Arrays.asList("message");
     }
 
     @Override
     public List<String> getOptionalParameters() {
-        return List.of();
+        return Arrays.asList();
     }
 
     @Override
     public void execute(Object target, @NotNull List<String> params, @NotNull Map<String, String> replacements) throws IllegalArgumentException {
         if (target == null) return;
-        if (! (target instanceof CommandSender commandSender)) return;
-        params = applyPlaceholders(target instanceof Player player ? player : null, params, replacements);
+        if (! (target instanceof CommandSender)) return;
+        CommandSender commandSender = (CommandSender) target;
+        params = applyPlaceholders(target instanceof Player ? (Player) target : null, params, replacements);
         commandSender.sendMessage(ColorUtil.colorize(params.get(0)));
     }
 }
